...
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="ohs-Jd-tiQ"/>
                                </constraints>
                                <color key="barTintColor" red="0.95686274510000002" green="0.56078431370000004" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
                                <items>
                                    <navigationItem title="iTunes Songs" id="THY-SW-uot">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="86X-KP-fjj">
                                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                            <connections>
                                                <action selector="goBack:" destination="Udc-Bm-f3o" id="W5b-dA-0ID"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Sort" id="JEy-CD-Yj3">
                                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <searchBar contentMode="redraw" placeholder="Search for min 2 characters (spaces not included)" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czc-sG-6ia">
                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                <color key="backgroundColor" red="0.95686274509803915" green="0.5607843137254902" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="ep3-cw-NuN"/>
                                </constraints>
                                <color key="barTintColor" red="0.95686274510000002" green="0.56078431370000004" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="piZ-j3-eh0">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <color key="barTintColor" red="0.95686274509803915" green="0.5607843137254902" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
                                <items>
                                    <navigationItem title="iTunes" id="1ni-m7-zeH">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Ril-sy-32E">
                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <connections>
                                                <action selector="goBack:" destination="9hJ-oK-4Zh" id="QpP-dm-GGu"/>
                                            </connections>
                                        </barButtonItem>
...
                                <rect key="frame" x="326" y="632" width="33" height="15"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="33" id="7qY-e8-Ssi"/>
                                    <constraint firstAttribute="height" constant="15" id="wXZ-F0-fkq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="5"/>
                                <state key="normal" title="BETA RX">
                                    <color key="titleColor" cyan="0.0" magenta="0.50173443559999997" yellow="0.0" black="0.0" alpha="1" colorSpace="custom" customColorSpace="genericCMYKColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="goToITunesSongsButton:" destination="B6H-Kd-CaO" eventType="touchUpInside" id="h4Z-w2-YF3"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="jGi-Ra-Vzn">
                                <rect key="frame" x="139" y="46" width="96" height="96"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="96" id="9jb-ky-oDY"/>
                                    <constraint firstAttribute="height" constant="96" id="IZb-yr-gse"/>
                                </constraints>
                            </imageView>
...
